--- a/estilo.css
+++ b/estilo.css
@@ -9,9 +9,9 @@ img.carros
 
 }
 
-/* .slide {
-    width: 50%;
-} */
+.slide-home {
+    width: 30%;
+}
 
 /* #carouselExampleIndicators {
     width: 50%;
